--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,49 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-compiler-plugin</artifactId>
+        	<version>2.3.2</version>
+        	<configuration>
+        		<source>1.6</source>
+        		<target>1.6</target>
+        	</configuration>
+  		</plugin>
+  	</plugins>
+  </build>
+
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+  	<dependency>
+  		<groupId>org.apache.commons</groupId>
+  		<artifactId>commons-math</artifactId>
+  		<version>2.2</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.8.2</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.jmonkeyengine.mvn.jme3</groupId>
+  		<artifactId>jmonkeyengine3</artifactId>
+  		<version>3.0</version>
+  	</dependency>
+  		<dependency>
+		<groupId>org.jmonkeyengine.mvn.jme3</groupId>
+		<artifactId>lwjgl</artifactId>
+		<version>3.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.jmonkeyengine.mvn.jme3</groupId>
+		<artifactId>lwjgl_natives</artifactId>
+		<version>3.0</version>
+	</dependency>
   </dependencies>
 </project>
