Ellipse Demo app.
git-svn-id: svn://mcpnet.ca/demurrage/GameClient@277 8c7f07c7-4e7d-0410-9ed6-aab42a9a149d

--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,10 @@
 		<artifactId>lwjgl_natives</artifactId>
 		<version>3.0</version>
 	</dependency>
+	<dependency>
+		<groupId>ca.mcpnet.demurrage</groupId>
+		<artifactId>GameEngine</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 </project>
