--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>ca.mcpnet.demurrage</groupId>
   <artifactId>GameClient</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>GameClient</name>
@@ -14,74 +14,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-        	<artifactId>maven-compiler-plugin</artifactId>
-        	<version>2.3.2</version>
-        	<configuration>
-        		<source>1.6</source>
-        		<target>1.6</target>
-        	</configuration>
-  		</plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <version>1.4</version>
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>shade</goal>
-                    </goals>
-                    <configuration>
-                        <transformers>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                <mainClass>org.sonatype.haven.HavenCli</mainClass>
-                            </transformer>
-                        </transformers>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-  	</plugins>
-  </build>
-
   <dependencies>
-  	<dependency>
-  		<groupId>org.apache.commons</groupId>
-  		<artifactId>commons-math</artifactId>
-  		<version>2.2</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.8.2</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.jmonkeyengine.mvn.jme3</groupId>
-  		<artifactId>jmonkeyengine3</artifactId>
-  		<version>3.0</version>
-  	</dependency>
-  		<dependency>
-		<groupId>org.jmonkeyengine.mvn.jme3</groupId>
-		<artifactId>lwjgl</artifactId>
-		<version>3.0</version>
-	</dependency>
-	<dependency>
-		<groupId>org.jmonkeyengine.mvn.jme3</groupId>
-		<artifactId>lwjgl_natives</artifactId>
-		<version>3.0</version>
-	</dependency>
-	<dependency>
-		<groupId>ca.mcpnet.demurrage</groupId>
-		<artifactId>GameEngine</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
