Finish eclipse and svn:ignore setup
git-svn-id: svn://mcpnet.ca/demurrage/GameClient@591 8c7f07c7-4e7d-0410-9ed6-aab42a9a149d

--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
   <groupId>ca.mcpnet.demurrage</groupId>
   <artifactId>GameClient</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>GameClient</name>
-  <url>http://maven.apache.org</url>
+  <url>http://www.mcpnet.ca</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
