--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,210 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <finalName>${project.artifactId}-${project.version}.jar</finalName>
+    <main.class>ca.mcpnet.demurrage.GameEngine.GameClient.GameClient</main.class>
+    <natives>${basedir}/target/natives/</natives>
+    <release.natives>natives/</release.natives>
   </properties>
 
+  <organization>
+  	<name>Master Control Productions</name>
+  </organization>
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-compiler-plugin</artifactId>
+        	<version>2.3.2</version>
+        	<configuration>
+        		<source>1.6</source>
+        		<target>1.6</target>
+        	</configuration>
+  		</plugin>
+  		<plugin>
+  			<groupId>com.googlecode.mavennatives</groupId>
+  			<artifactId>maven-nativedependencies-plugin</artifactId>
+  			<version>0.0.6</version>
+  			<executions>
+  				<execution>
+  					<id>unpacknatives</id>
+  					<phase>generate-resources</phase>
+  					<goals>
+  						<goal>copy</goal>
+  					</goals>
+  				</execution>
+  			</executions>
+  		</plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.3.2</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>${main.class}</mainClass>
+                        <addClasspath>true</addClasspath>
+                        <classpathPrefix>lib/</classpathPrefix>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>2.2.1</version>
+            <executions>
+                <execution>
+                    <id>bundle-project-sources</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                    <configuration>
+                        <descriptors>
+                            <descriptor>src/META-INF/assembly.xml</descriptor>
+                        </descriptors>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+  	</plugins>
+  	<resources>
+  		<resource>
+  			<directory>src/main/resources</directory>
+  		</resource>
+  	</resources>
+  	<testResources>
+  		<testResource>
+  			<directory>src/main/resources</directory>
+  		</testResource>
+  		<testResource>
+  			<directory>src/test/resources</directory>
+  		</testResource>
+  	</testResources>
+  	<pluginManagement>
+  		<plugins>
+  			<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+  			<plugin>
+  				<groupId>org.eclipse.m2e</groupId>
+  				<artifactId>lifecycle-mapping</artifactId>
+  				<version>1.0.0</version>
+  				<configuration>
+  					<lifecycleMappingMetadata>
+  						<pluginExecutions>
+  							<pluginExecution>
+  								<pluginExecutionFilter>
+  									<groupId>
+  										com.googlecode.mavennatives
+  									</groupId>
+  									<artifactId>
+  										maven-nativedependencies-plugin
+  									</artifactId>
+  									<versionRange>
+  										[0.0.6,)
+  									</versionRange>
+  									<goals>
+  										<goal>copy</goal>
+  									</goals>
+  								</pluginExecutionFilter>
+  								<action>
+  									<ignore></ignore>
+  								</action>
+  							</pluginExecution>
+  						</pluginExecutions>
+  					</lifecycleMappingMetadata>
+  				</configuration>
+  			</plugin>
+  		</plugins>
+  	</pluginManagement>
+  </build>
+
+  <repositories>
+  <!--
+  	<repository>
+  		<id>mavenNatives</id>
+  		<name>Maven Natives Repository</name>
+  		<url>http://mavennatives.googlecode.com/svn/repo</url>
+  		<snapshots>
+  			<enabled>true</enabled>
+  		</snapshots>
+  	</repository>
+    -->
+  	<repository>
+  		<id>slick</id>
+  		<name>slick</name>
+  		<url>http://slick.cokeandcode.com/mavenrepo</url>
+  	</repository>
+  </repositories>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.8.2</version>
+  		<type>jar</type>
+  		<scope>test</scope>
+  	</dependency>
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.16</version>
+		<scope>compile</scope>
+	</dependency>
+  	<dependency>
+  		<groupId>org.apache.commons</groupId>
+  		<artifactId>commons-math</artifactId>
+  		<version>2.2</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+	<dependency>
+		<groupId>org.apache.directory.studio</groupId>
+		<artifactId>org.apache.commons.io</artifactId>
+		<version>2.1</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.directory.studio</groupId>
+		<artifactId>org.apache.commons.lang</artifactId>
+		<version>2.6</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>io.netty</groupId>
+		<artifactId>netty</artifactId>
+		<version>3.5.7.Final</version>
+		<scope>compile</scope>
+	</dependency>
+    <!-- The following are GameClient specific -->
+	<dependency>
+		<groupId>org.lwjgl.lwjgl</groupId>
+		<artifactId>lwjgl</artifactId>
+		<version>2.9.0</version>
+	</dependency>
+	<dependency>
+		<groupId>slick</groupId>
+		<artifactId>slick</artifactId>
+		<version>274</version>
+	</dependency>
+	<dependency>
+		<groupId>xpp3</groupId>
+		<artifactId>xpp3</artifactId>
+		<version>1.1.4c</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>de.matthiasmann.twl</groupId>
+		<artifactId>twl</artifactId>
+		<version>1.082</version>
+        <type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>ca.mcpnet.demurrage</groupId>
+		<artifactId>GameEngine</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 </project>
