Update dependency on Common
git-svn-id: svn://mcpnet.ca/demurrage/GameClient@617 8c7f07c7-4e7d-0410-9ed6-aab42a9a149d

--- a/pom.xml
+++ b/pom.xml
@@ -214,7 +214,7 @@
 	</dependency>
 	<dependency>
 		<groupId>ca.mcpnet.demurrage</groupId>
-		<artifactId>GameEngine</artifactId>
+		<artifactId>Common</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
   </dependencies>
