--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>ca.mcpnet.demurrage</groupId>
   <artifactId>GameClient</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>GameClient</name>
@@ -218,4 +216,10 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
   </dependencies>
+  <parent>
+  	<groupId>ca.mcpnet.demurrage</groupId>
+  	<artifactId>GameEngine</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
+  	<relativePath>../GameEngine</relativePath>
+  </parent>
 </project>
