--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         </plugin>
         <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
-            <version>2.2.1</version>
+            <version>2.4</version>
             <executions>
                 <execution>
                     <id>bundle-project-sources</id>
@@ -59,7 +59,21 @@
                     </goals>
                     <configuration>
                         <descriptors>
-                            <descriptor>src/META-INF/assembly.xml</descriptor>
+                            <descriptor>src/assemble/release.xml</descriptor>
+                        </descriptors>
+                    </configuration>
+                </execution>
+                <execution>
+                    <id>assemble-distribution-scripts</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                    <configuration>
+                        <finalName>releasescripts</finalName>
+                        <appendAssemblyId>false</appendAssemblyId>
+                        <descriptors>
+                            <descriptor>src/assemble/releasescripts.xml</descriptor>
                         </descriptors>
                     </configuration>
                 </execution>
