Get release script working for GameClient
git-svn-id: svn://mcpnet.ca/demurrage/GameClient@640 8c7f07c7-4e7d-0410-9ed6-aab42a9a149d

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 
   <properties>
     <finalName>${project.artifactId}-${project.version}.jar</finalName>
+    <releaseName>${project.artifactId}-${project.version}-release.zip</releaseName>
+    <releaseVersion>${project.version}</releaseVersion>
     <main.class>ca.mcpnet.demurrage.GameEngine.GameClient.GameClient</main.class>
     <natives>${basedir}/target/natives/</natives>
     <release.natives>natives/</release.natives>
