--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
 		<artifactId>Common</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</dependency>
+	<dependency>
+		<groupId>ca.mcpnet.demurrage</groupId>
+		<artifactId>GameLauncher</artifactId>
+		<version>1.0.0</version>
+	</dependency>
   </dependencies>
   <parent>
   	<groupId>ca.mcpnet.demurrage</groupId>
