Fix the GameClient main class.
git-svn-id: svn://mcpnet.ca/demurrage/GameClient@656 8c7f07c7-4e7d-0410-9ed6-aab42a9a149d

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <finalName>${project.artifactId}-${project.version}.jar</finalName>
     <releaseName>${project.artifactId}-${project.version}-release.zip</releaseName>
     <releaseVersion>${project.version}</releaseVersion>
-    <main.class>ca.mcpnet.demurrage.GameEngine.GameClient.GameClient</main.class>
+    <main.class>ca.mcpnet.demurrage.GameClient.GameClient</main.class>
     <natives>${basedir}/target/natives/</natives>
     <release.natives>natives/</release.natives>
   </properties>
@@ -66,7 +66,7 @@
                     </configuration>
                 </execution>
                 <execution>
-                    <id>assemble-distribution-scripts</id>
+                    <id>assemble-release-scripts</id>
                     <phase>package</phase>
                     <goals>
                         <goal>single</goal>
