--- a/pom.xml
+++ b/pom.xml
@@ -179,13 +179,13 @@
 	<dependency>
 		<groupId>ca.mcpnet.demurrage</groupId>
 		<artifactId>Common</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.1.1</version>
 	</dependency>
   </dependencies>
   <parent>
   	<groupId>ca.mcpnet.demurrage</groupId>
   	<artifactId>GameEngine</artifactId>
-  	<version>0.1.0-SNAPSHOT</version>
+  	<version>0.1.1</version>
   	<relativePath>../GameEngine</relativePath>
   </parent>
 </project>
