--- a/pom.xml
+++ b/pom.xml
@@ -1,140 +1,135 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <artifactId>JavaNebula</artifactId>
   <packaging>jar</packaging>
-
   <name>GameClient</name>
-
   <properties>
     <finalName>${project.artifactId}-${project.version}.jar</finalName>
     <releaseName>${project.artifactId}-${project.version}-release.zip</releaseName>
     <releaseVersion>${project.version}</releaseVersion>
-    <main.class>ca.mcpnet.demurrage.GameClient.TestNebula</main.class>
+    <main.class>ca.mcpnet.javanebula.JavaNebula</main.class>
     <natives>${basedir}/target/natives/</natives>
     <release.natives>natives/</release.natives>
   </properties>
-
   <organization>
-  	<name>Master Control Productions</name>
+    <name>Master Control Productions</name>
   </organization>
   <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>com.googlecode.mavennatives</groupId>
-  			<artifactId>maven-nativedependencies-plugin</artifactId>
-  			<version>0.0.6</version>
-  			<executions>
-  				<execution>
-  					<id>unpacknatives</id>
-  					<phase>generate-resources</phase>
-  					<goals>
-  						<goal>copy</goal>
-  					</goals>
-  				</execution>
-  			</executions>
-  		</plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.3.2</version>
+    <plugins>
+      <plugin>
+        <groupId>com.googlecode.mavennatives</groupId>
+        <artifactId>maven-nativedependencies-plugin</artifactId>
+        <version>0.0.6</version>
+        <executions>
+          <execution>
+            <id>unpacknatives</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>${main.class}</mainClass>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.4</version>
+        <executions>
+          <execution>
+            <id>bundle-project-sources</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
             <configuration>
-                <archive>
-                    <manifest>
-                        <mainClass>${main.class}</mainClass>
-                        <addClasspath>true</addClasspath>
-                        <classpathPrefix>lib/</classpathPrefix>
-                    </manifest>
-                </archive>
+              <descriptors>
+                <descriptor>src/assemble/release.xml</descriptor>
+              </descriptors>
             </configuration>
-        </plugin>
+          </execution>
+          <execution>
+            <id>assemble-release-scripts</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <finalName>releasescripts</finalName>
+              <appendAssemblyId>false</appendAssemblyId>
+              <attach>false</attach>
+              <descriptors>
+                <descriptor>src/assemble/releasescripts.xml</descriptor>
+              </descriptors>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+    </resources>
+    <testResources>
+      <testResource>
+        <directory>src/main/resources</directory>
+      </testResource>
+      <testResource>
+        <directory>src/test/resources</directory>
+      </testResource>
+    </testResources>
+    <pluginManagement>
+      <plugins>
+        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
         <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <version>2.4</version>
-            <executions>
-                <execution>
-                    <id>bundle-project-sources</id>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>single</goal>
-                    </goals>
-                    <configuration>
-                        <descriptors>
-                            <descriptor>src/assemble/release.xml</descriptor>
-                        </descriptors>
-                    </configuration>
-                </execution>
-                <execution>
-                    <id>assemble-release-scripts</id>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>single</goal>
-                    </goals>
-                    <configuration>
-                        <finalName>releasescripts</finalName>
-                        <appendAssemblyId>false</appendAssemblyId>
-                        <attach>false</attach>
-                        <descriptors>
-                            <descriptor>src/assemble/releasescripts.xml</descriptor>
-                        </descriptors>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-  	</plugins>
-  	<resources>
-  		<resource>
-  			<directory>src/main/resources</directory>
-  		</resource>
-  	</resources>
-  	<testResources>
-  		<testResource>
-  			<directory>src/main/resources</directory>
-  		</testResource>
-  		<testResource>
-  			<directory>src/test/resources</directory>
-  		</testResource>
-  	</testResources>
-  	<pluginManagement>
-  		<plugins>
-  			<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-  			<plugin>
-  				<groupId>org.eclipse.m2e</groupId>
-  				<artifactId>lifecycle-mapping</artifactId>
-  				<version>1.0.0</version>
-  				<configuration>
-  					<lifecycleMappingMetadata>
-  						<pluginExecutions>
-  							<pluginExecution>
-  								<pluginExecutionFilter>
-  									<groupId>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>
   										com.googlecode.mavennatives
   									</groupId>
-  									<artifactId>
+                    <artifactId>
   										maven-nativedependencies-plugin
   									</artifactId>
-  									<versionRange>
+                    <versionRange>
   										[0.0.6,)
   									</versionRange>
-  									<goals>
-  										<goal>copy</goal>
-  									</goals>
-  								</pluginExecutionFilter>
-  								<action>
-  									<ignore></ignore>
-  								</action>
-  							</pluginExecution>
-  						</pluginExecutions>
-  					</lifecycleMappingMetadata>
-  				</configuration>
-  			</plugin>
-  		</plugins>
-  	</pluginManagement>
+                    <goals>
+                      <goal>copy</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore/>
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
-
   <repositories>
-  <!--
+    <!--
   	<repository>
   		<id>mavenNatives</id>
   		<name>Maven Natives Repository</name>
@@ -144,39 +139,39 @@
   		</snapshots>
   	</repository>
     -->
-  	<repository>
-  		<id>slick</id>
-  		<name>slick</name>
-  		<url>http://slick.cokeandcode.com/mavenrepo</url>
-  	</repository>
+    <repository>
+      <id>slick</id>
+      <name>slick</name>
+      <url>http://slick.cokeandcode.com/mavenrepo</url>
+    </repository>
   </repositories>
   <dependencies>
     <!-- The following are GameClient specific -->
-	<dependency>
-		<groupId>log4j</groupId>
-		<artifactId>log4j</artifactId>
-		<version>1.2.16</version>
-		<scope>compile</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.lwjgl.lwjgl</groupId>
-		<artifactId>lwjgl</artifactId>
-		<version>2.9.0</version>
-	</dependency>
-	<dependency>
-		<groupId>org.apache.directory.studio</groupId>
-		<artifactId>org.apache.commons.io</artifactId>
-		<version>2.1</version>
-		<type>jar</type>
-		<scope>compile</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.apache.directory.studio</groupId>
-		<artifactId>org.apache.commons.lang</artifactId>
-		<version>2.6</version>
-		<type>jar</type>
-		<scope>compile</scope>
-	</dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.16</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.lwjgl.lwjgl</groupId>
+      <artifactId>lwjgl</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.directory.studio</groupId>
+      <artifactId>org.apache.commons.io</artifactId>
+      <version>2.1</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.directory.studio</groupId>
+      <artifactId>org.apache.commons.lang</artifactId>
+      <version>2.6</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <groupId>ca.mcpnet</groupId>
   <version>0.0.1</version>
